test/functions/deitz/test_where_recursion.good
test_where_recursion.chpl:1: In function 'foo':
test_where_recursion.chpl:1: error: illegal where clause due to infinite instantiation
test_where_recursion.chpl:1: note: evaluation of 'foo' where clause results in instantiation of 'foo'
  test_where_recursion.chpl:1: called as foo(i: int(64))
