test/functions/deitz/test_where_recursion.chpl
proc foo(i) where foo(2).type == real {
  writeln("hello world");
}

foo(2);
